style.css
/* ... */
@media (min-width: 640px) { 
    h1 { font-size: 2.25rem; } 
}


h2 {
    color: #056599; 
    font-size: 1.625rem;
    line-height: 1.3;
    margin-top: 2rem;
    margin-bottom: 1rem;
}
@media (min-width: 768px) {
    h2 { font-size: 2rem; }
}

h3 {
    color: #056599; 
    font-weight: 600; 
    font-size: 1.25rem; 
    line-height: 1.4;
    margin-top: 1.5rem;
    margin-bottom: 0.75rem;
}
@media (min-width: 768px) {
    h3 { font-size: 1.5rem; }
}

h4 {
    color: #056599; 
    font-weight: 600; 
    font-size: 1.125rem; 
    line-height: 1.4;
    margin-top: 1rem;
    margin-bottom: 0.5rem;
}
@media (min-width: 768px) {
    h4 { font-size: 1.25rem; }
}

.text-shadow {
    text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
}
.italic-text {
    font-style: italic;
}

/* Animations */
.animate-fadeIn, .animate-fadeInUp {
    opacity: 100;
    transition-property: opacity, transform;
    transition-duration: 1000ms;
    transition-timing-function: ease-out;
}
.animate-fadeInUp {
    transform: translateY(2.5rem); 
}
.delay-200 {
    transition-delay: 200ms;
}


/* Container */
.container {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
    padding-left: 1rem; 
    padding-right: 1rem; 
    box-sizing: border-box; 
}
@media (min-width: 640px) { 
    .container {
        max-width: 640px;
        padding-left: 1.5rem; 
        padding-right: 1.5rem;
    }
}
@media (min-width: 768px) { 
    .container {
        max-width: 768px;
    }
}
@media (min-width: 1024px) { 
    .container {
        max-width: 1024px;
        padding-left: 2rem; 
        padding-right: 2rem;
    }
}
@media (min-width: 1280px) { 
    .container {
        max-width: 1280px;
    }
}


/* Header */
.site-header {
    background-color: white;
    position: sticky;
    display: flex;
    gap: 20px;
    top: 0;
    z-index: 40; 
    text-align: center;
    text-size-adjust: auto;
    box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06); 
}
.header-container {
    width: 100%;
    justify-content: center;
    align-content: center;
    display: inline-block;
    box-sizing: border-box; 
}
.header-content {
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 100%; 

}
.logo-container {
    display: flex;
    flex: 0 0 auto;
    width: auto;
    height: 64px; 
    cursor: pointer;
}
@media (min-width: 640px) {
    .logo-container {
        margin-left: 20%;
    }
}
@media (max-width: 640px) {
    .logo-container {
        margin: 0;
    }
}
@media (min-width: 768px) and (max-width: 1023px) {
    .logo-container {
        margin: 0 5% 0 10%;
        display: flex;
    }
}
.logo-link {
    display: block;
    width: 100%;
    height: auto;
}
@media (max-width: 640px) {
    .logo-link {
        display: flex;
        padding: 0 0 0 10px;
        align-items: center;
        justify-content: center;
    }
}
@media (min-width: 768px) and (max-width: 1023px) {
    .logo-container {
        padding: 0 0 0 10px;
        align-items: center;
        justify-content: center;
    }
}
.site-logo {
    width: 100px;
    height: auto;
    max-height: 64px;
    display: flex;
    align-content: start;
    justify-content: center;
    flex-grow: 0;
    flex-shrink: 0;
    
        
}
@media (max-width: 640px) {
    .site-logo {
        width: 60.02px;
        height: 75.02;
        border-radius: 8px; /* Rundet die Ecken leicht ab */
        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.57); /* Fügt einen weichen Schatten hinzu */
    }
}
@media (min-width: 768px) and (max-width: 1023px) {
    .site-logo {
        width: 60.02px;
        height: 75.02;
        border-radius: 8px; /* Rundet die Ecken leicht ab */
        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.57); /* Fügt einen weichen Schatten hinzu */
    }
}
.desktop-nav {
    display: none;
}
@media (min-width: 768px) { 
    .desktop-nav {
        display: flex;
        justify-content: center;
        align-items: center;
        height: 100%;
    }
    .desktop-nav > *:not(:last-child) { 
        display: flex;
        justify-self: center;
        align-content: center;
        height: 100%;
    }
}
.nav-link {
    color: #333333; 
    font-weight: 600; 
    height: 100%;
    transition-property: color;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 300ms;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    text-decoration: none;
    text-size-adjust: auto;
    padding: 0 16px;
}

.nav-link:hover {
    color: #056599; 
}
.header-controls {
    display: flex;
    align-items: center;
}
@media (min-width: 768px) {
    .header-controls {
        margin-right: 20%;
    }
}
.header-controls > *:not(:last-child) { 
    margin-right: 0px;
}

@media (min-width: 640px) { 
    .header-controls > *:not(:last-child) {
        display: flex;
        align-items: center;
        width: 100px;
        justify-content: space-around;
    }
}
.control-button {
    padding: 4px; 
    margin: 0rem;
    height: 100%;
    border-radius: 9999px; 
    color: #056599;
    font-weight: 600; 
    transition-property: background-color;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms; 
    background-color: transparent;
    border: transparent;
    cursor: pointer;
}
.control-button:hover {
    background-color: #e5e7eb; 
}
@media (max-width: 640px) {
    .control-button {
        display: flex;
        align-items: center;
        justify-content: center;
        height: 100%;
        margin: auto;
    }
}
.size-switcher  {
    position: relative;
    z-index: 50;
    justify-content: space-around;
    align-items: center;
    width: 80px;
    border-style: solid;
    border-radius: 40px;
    height: 48px;
    border-color: #056599;
    display: flex;
}
/* ... */

